# SiriusChat

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI记忆系统与情感化助手：群聊场景可落地方案框架.docx  C2C3_ARCHITECTURE_DESIGN.md  C2C3_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CODE_AUDIT.md  Makefile  P0-003-REFACTOR-PLAN.md  P2-002-PERF-PLAN.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROJECT_ISSUES.md  PYPI_PUBLISHING_STATUS.md  README.md  SETUP_TRUSTED_PUBLISHING.md  SIRIUS_CHAT_ENGINE_FILE_OWNERSHIP_SPEC.md  check_brackets.py  check_syntax.py  coverage.xml  main.py  paper_raw.txt  pyproject.toml  重构.md
.github/: PROJECT_ISSUES.md  copilot-instructions.md
.github/instructions/: backend-testing.instructions.md
.github/prompts/: provider-onboarding.prompt.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api.json  api.md  architecture.md  best-practices.md  change-impact-guide.md  config-system.md  configuration-guide.md  configuration.md  emotion-intent-analysis.md  engine-deep-dive.md  engine-emotional.md  engine-legacy.md  external-usage.md  full-architecture-flow.md  integration-sync-guide.md  memory-system.md  memory_user_system_workflow_report.md  migration-event-stream.md  migration-live-message.md  migration-memory-v2.md  migration-roleplay-v0.20.md  migration-roleplay-v082.md  migration-v0.11.md  migration-v0.12.md  migration-v0.13.md  migration-v0.14.md  migration-v0.15.md  migration-v0.16.md  migration-v0.17.md  migration-v0.19.md  migration-v0.23.md  migration-v0.24.md  migration-v0.25.md  migration-v0.27.1.md  migration-v0.27.10.md  migration-v0.27.11.md  migration-v0.27.12.md  migration-v0.27.2.md  migration-v0.27.3.md  (+33 more)
examples/: dynamic_group_chat_usage.py  dynamic_model_routing.py  emotional_group_chat_usage.py  event_verification_usage.py  external_api_usage.py  memory_extract_frequency_demo.py  migrate_session_store.py  roleplay_template_selection.py  session.aliyun_bailian.json  session.deepseek.json  session.json  session.siliconflow.json  session_emotional.json  session_multimodel.json  session_prompt_splitting.json
examples/skills/: README.md  system_info.py
scripts/: ci_check.py  fix_debounce_multiline.py  fix_debounce_tests.py  generate_api_docs.py  migrate_glossary_to_persona.py  setup_dev_env.py
sirius_chat/: __init__.py  _mixin.py  async_engine.py  background_tasks.py  cli.py  cli_diagnostics.py  config_manager.py  event_memory.py  exceptions.py  logging_config.py  memory_quality.py  memory_quality_tools.py  mixins.py  models.py  orchestration_config.py  persona_config.py  persona_manager.py  persona_worker.py  prompt_builders.py  roleplay_prompting.py  session_runner.py  token_usage.py  trait_taxonomy.py  user_memory.py
sirius_chat/api/: __init__.py  engine.py  memory.py  models.py  orchestration.py  prompting.py  providers.py  session.py  token_usage.py
sirius_chat/async_engine/: __init__.py  core.py  prompts.py  (+3 more)
tests/: __init__.py  conftest.py  test_api_integrity.py  test_async_engine.py  test_auto_multimodal_config.py  test_autobiographical_memory.py  test_basic_memory.py  test_bugfix_round2.py  test_c2c3_optimization.py  test_cache.py  test_cli_config.py  test_cli_diagnostics.py  test_cli_runtime.py  test_cognition_analyzer.py  test_config_manager.py  test_context_assembler.py  test_deepseek_provider.py  test_delayed_queue_merge.py  test_diary_consolidator.py  test_diary_memory.py  test_diary_retrieval_quality.py  test_dual_output.py  test_dynamic_model_routing.py  test_emotional_engine_advanced.py  test_emotional_engine_basic.py  test_engine.py  test_engine_e2e.py  test_engine_event_stream.py  test_engine_file_ownership.py  test_engine_persistence.py  test_event_user_memory_integration.py  test_exceptions.py  test_identity_resolver.py  test_intent_and_consolidation.py  test_logging_config.py  test_main_bootstrap.py  test_main_resume.py  test_memory_quality.py  test_memory_system_v2.py  test_migration_v0_28.py  (+29 more)
(+225 files in other folders)
